--- a/requirements.txt
+++ b/requirements.txt
@@ -1,339 +1,8 @@
-﻿absl-py==1.4.0
-addict==2.4.0
-aio-pika==8.2.3
-aiofiles==24.1.0
-aiogram==2.15
-aiohttp==3.9.5
-aiohttp-retry==2.9.1
-aiormq==6.4.2
-aiosignal==1.3.2
-anyio==4.8.0
-APScheduler==3.9.1.post1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.11.0
-asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.4
-async-timeout==4.0.3
-attrs==25.2.0
-babel==2.17.0
-beautifulsoup4==4.13.3
-bidict==0.23.1
-bleach==6.2.0
-blinker==1.9.0
-boto3==1.36.17
-botocore==1.36.17
-bs4==0.0.2
-CacheControl==0.12.14
-cachetools==5.5.1
-catalogue==2.0.10
-certifi==2025.1.31
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpathlib==0.20.0
-cloudpickle==3.1.1
-colorama==0.4.6
-colorclass==2.2.2
-coloredlogs==15.0.1
-colorhash==1.2.1
-comm==0.2.2
-confection==0.1.5
-confluent-kafka==2.8.0
-crayons==0.4.0
-cryptography==44.0.0
-cycler==0.12.1
-cymem==2.0.11
-dask==2022.10.2
-debugpy==1.8.13
-decorator==5.2.1
-decouple==0.0.7
-defusedxml==0.7.1
-distlib==0.3.9
-Django==4.2.27
-dnspython==2.3.0
-docopt==0.6.2
-docx2txt==0.8
-en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl
-et_xmlfile==2.0.0
-exceptiongroup==1.2.2
-executing==2.2.0
-facenet-pytorch==2.6.0
-Faker==37.8.0
-fastjsonschema==2.21.1
-fbmessenger==6.0.0
-fer==22.5.1
-ffmpeg==1.4
-filelock==3.17.0
-fire==0.7.0
-Flask==3.1.0
-Flask-Mail==0.10.0
-Flask-MySQLdb==2.0.0
-flatbuffers==25.2.10
-fonttools==4.56.0
-fqdn==1.5.1
-frozenlist==1.5.0
-fsspec==2025.2.0
-future==1.0.0
-gast==0.4.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.2
-google-api-python-client==2.183.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-google-generativeai==0.8.6
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
-greenlet==3.1.1
-grpcio==1.71.0
-grpcio-status==1.71.0
-gunicorn==23.0.0
-h11==0.14.0
-h5py==3.12.1
-httpcore==1.0.7
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.28.1
-humanfriendly==10.0
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-importlib_metadata==8.6.1
-ipykernel==6.29.5
-ipython==8.18.1
-ipywidgets==8.1.5
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.5
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.10.0
-jsonpickle==3.0.4
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.7
-langcodes==3.5.0
-language_data==1.3.0
-libclang==18.1.1
-llvmlite==0.43.0
-locket==1.0.0
-logger==1.4
-marisa-trie==1.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.5.3
-matplotlib-inline==0.1.7
-mattermostwrapper==2.2
-mdurl==0.1.2
-mistune==3.1.2
-ml_dtypes==0.5.1
-mltu==1.2.5
-moviepy==2.1.2
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==5.2.0
-murmurhash==1.0.12
-mysqlclient==2.2.7
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==2.6.3
-nltk==3.9.1
-notebook==7.3.2
-notebook_shim==0.2.4
-numba==0.60.0
-numpy==1.23.5
-oauthlib==3.2.2
-onnxruntime==1.19.2
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-openpyxl==3.1.5
-opt_einsum==3.4.0
-overrides==7.7.0
-packaging==24.2
-pamqp==3.2.1
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-partd==1.4.2
-pdfminer.six==20240706
-piexif==1.1.3
-pillow==10.2.0
-platformdirs==4.3.6
-pluggy==1.5.0
-portalocker==2.10.1
-preshed==3.0.9
-proglog==0.1.10
-prometheus_client==0.21.1
-prompt_toolkit==3.0.50
-propcache==0.2.1
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==7.0.0
-psycopg2-binary==2.9.10
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pycryptodome==3.21.0
-pydantic==1.10.9
-pydot==1.4.2
-Pygments==2.19.1
-PyJWT==2.10.1
-pykwalify==1.8.0
-pymongo==4.3.3
-pyparsing==3.2.1
-PyPDF2==3.0.1
-pyreadline3==3.5.4
-pyresparser==1.0.6
-pyrsistent==0.20.0
-pytesseract==0.3.13
-python-crfsuite==0.9.11
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-engineio==4.11.2
-python-json-logger==3.3.0
-python-socketio==5.12.1
-pytz==2022.7.1
-PyWavelets==1.6.0
-pywinpty==2.0.15
-PyYAML==6.0.2
-pyzmq==26.3.0
-qqdm==0.0.7
-questionary==1.10.0
-randomname==0.1.5
-rasa==3.6.21
-rasa-sdk==3.6.2
-redis==4.6.0
-referencing==0.36.2
-regex==2022.10.31
+Django==4.2.7
+gunicorn==21.2.0
 requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.4
-rocketchat-API==1.30.0
-rpds-py==0.23.1
-rsa==4.9
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.12
-s3transfer==0.11.2
-safetensors==0.4.5
-sanic==21.12.2
-Sanic-Cors==2.0.1
-sanic-jwt==1.8.0
-sanic-routing==0.7.2
-scikit-learn==1.1.3
-scipy==1.10.1
-seaborn==0.13.2
-Send2Trash==1.8.3
-sentencepiece==0.2.0
-sentry-sdk==1.14.0
-shap==0.48.0
-shellingham==1.5.4
-simple-websocket==1.1.0
-six==1.17.0
-sklearn-crfsuite==0.3.6
-skops==0.9.0
-slack_sdk==3.34.0
-slicer==0.0.8
-smart-open==7.1.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sounddevice==0.5.1
-soupsieve==2.6
-spacy==3.8.3
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==1.4.54
-sqlparse==0.5.5
-srsly==2.5.1
-stack-data==0.6.3
-stegano==0.11.3
-stow==1.4.1
-structlog==23.3.0
-structlog-sentry==2.1.0
-sympy==1.13.3
-tabulate==0.9.0
-tarsafe==0.0.4
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
-tensorflow-hub==0.13.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-terminado==0.18.1
-terminaltables==3.1.10
-thinc==8.3.4
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tomli==2.2.1
-toolz==1.0.0
-torch==2.2.2
-torchvision==0.17.2
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-twilio==8.2.2
-typer==0.15.1
-types-python-dateutil==2.9.0.20241206
-typing-utils==0.1.0
-typing_extensions==4.12.2
-tzdata==2025.1
-tzlocal==5.2
-ujson==5.10.0
-ultralytics==8.3.97
-ultralytics-thop==2.0.14
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==1.26.20
-virtualenv==20.29.3
-wasabi==1.1.3
-wcwidth==0.2.13
-weasel==0.4.1
-webcolors==24.11.1
-webencodings==0.5.1
-webexteamssdk==1.6.1
-websocket-client==1.8.0
-websockets==10.4
-Werkzeug==3.1.3
-widgetsnbextension==4.0.13
-wikipedia==1.4.0
-Wikipedia-API==0.8.1
-wrapt==1.14.1
-wsproto==1.2.0
-xgboost==2.1.4
-yarl==1.18.3
-zipp==3.21.0
+python-dotenv==1.0.1
+Pillow==10.2.0
 
-
-
-
+# HuggingFace API (no local ML)
+huggingface-hub==0.28.1
