--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ Pillow==10.2.0
 
 # HuggingFace API (no local ML)
 huggingface-hub==0.28.1
-pip install cloudinary django-cloudinary-storage
+cloudinary
+django-cloudinary-storage
+
